force-app/main/default/objects/IFv2_PrintableViewLayout__mdt/IFv2_PrintableViewLayout__mdt.object-meta.xml
<CustomObject>
    <label>Printable View Layout</label>
    <pluralLabel>Printable View Layouts</pluralLabel>
</CustomObject>