force-app/main/default/objects/IFv2_PrintableViewLayout__mdt/fields/HorizonatalLine__c.field-meta.xml
<CustomField>
    <fullName>HorizonatalLine__c</fullName>
    <label>Horizonatal Line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>