force-app/main/default/objects/IFv2_PrintableViewLayout__mdt/fields/HTMLTag__c.field-meta.xml
<CustomField>
    <fullName>HTMLTag__c</fullName>
    <label>HTML Tag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>