force-app/main/default/objects/IFv2_PrintableViewLayout__mdt/fields/ImageSourceTag__c.field-meta.xml
<CustomField>
    <fullName>ImageSourceTag__c</fullName>
    <label>Image Source Tag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>