force-app/main/default/objects/IFv2_PrintableViewLayout__mdt/fields/ImageSpecsTag__c.field-meta.xml
<CustomField>
    <fullName>ImageSpecsTag__c</fullName>
    <label>Image Specs Tag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>