force-app/main/default/objects/IFv2_PrintableViewLayout__mdt/fields/Table__c.field-meta.xml
<CustomField>
    <fullName>Table__c</fullName>
    <label>Table</label>
    <length>255</length>
    <type>Text</type>
</CustomField>