force-app/main/default/objects/IFv2_PrintableViewLayout__mdt/fields/TableCellLabel__c.field-meta.xml
<CustomField>
    <fullName>TableCellLabel__c</fullName>
    <label>Table Cell Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>