force-app/main/default/objects/IFv2_PrintableViewLayout__mdt/fields/TableCellValue__c.field-meta.xml
<CustomField>
    <fullName>TableCellValue__c</fullName>
    <label>Table Cell Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>