force-app/main/default/objects/IFv2_PrintableViewLayout__mdt/fields/TableRow__c.field-meta.xml
<CustomField>
    <fullName>TableRow__c</fullName>
    <label>Table Row</label>
    <length>255</length>
    <type>Text</type>
</CustomField>